May 2nd 2018: Neural Network added

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -304,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Creating random matrix\n",
@@ -682,7 +684,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Graphing purposes (optional)\n",
@@ -764,7 +768,7 @@
     "\n",
     "This is the basis of many different logistic regression algorithms. We can expand this to more attributes, more outputs and better cost functions and logistic functions. If you still have some doubts, please ask! I am looking forward to clarifying your doubts! \n",
     "\n",
-    "You've accomplished a milestone in your quest towards learning Machine Learning! Isn't it fascinating how, with little algebra, code and logic, we were able to produce such a useful and powerful tool? I believe that you can push yourself even further! I challenge you to optimize these lines of code, to get a faster output from the computer! There's so much you can improve this simple algorithm! It's a great exercise to start thinking about linear algebra and even other functions that exists in Python. Thank you very much for following! I wish you the best in your quest towards becoming Machine Learning Expert!."
+    "You've accomplished a milestone in your quest towards learning Machine Learning! Isn't it fascinating how, with little algebra, code and logic, we were able to produce such a useful and powerful tool? I believe that you can push yourself even further! I challenge you to optimize these lines of code, to get a faster output from the computer! There's so much you can improve this simple algorithm! It's a great exercise to start thinking about linear algebra and even other functions that exists in Python. Thank you very much for following! I wish you the best in your quest towards becoming Machine Learning Expert!"
    ]
   },
   {
